finish vae and add stn

--- a/test.ipynb
+++ b/test.ipynb
@@ -20,6 +20,228 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.tensor([[[1,2,3],[4,5,6]],[[7,8,9],[11,11,12]]], dtype=torch.float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 2, 3])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[4.0000, 5.0000, 6.0000],\n",
+       "        [7.5000, 8.0000, 9.0000]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.mean(a,dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bceloss = torch.nn.BCELoss(reduction='mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.ones((5,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = torch.randn((5,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(28.2800)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bceloss(torch.flatten(a),torch.flatten(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = a.transpose(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = torch.mean(a, dim=2, keepdim=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = a - b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([5, 3, 3000])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_pcd(pcd_path):\n",
+    "    lines = []\n",
+    "    num_points = None\n",
+    "\n",
+    "    with open(pcd_path, 'r') as f:\n",
+    "        for line in f:\n",
+    "            lines.append(line.strip())\n",
+    "            if line.startswith('POINTS'):\n",
+    "                num_points = int(line.split()[-1])\n",
+    "    assert num_points is not None\n",
+    "\n",
+    "    points = []\n",
+    "    for line in lines[-num_points:]:\n",
+    "        x, y, z = list(map(float, line.split()))\n",
+    "        points.append(np.array([x, y, z]))\n",
+    "    return np.array(points)  # N * 3\n",
+    "\n",
+    "def load_pcd_to_ndarray(pcd_path):\n",
+    "    with open(pcd_path) as f:\n",
+    "        while True:\n",
+    "            ln = f.readline().strip()\n",
+    "            if ln.startswith('DATA'):\n",
+    "                break\n",
+    "\n",
+    "        points = np.loadtxt(f)\n",
+    "        points = points[:, 0:3]\n",
+    "        return points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HEADER = '''\\\n",
+    "# .PCD v0.7 - Point Cloud Data file format\n",
+    "VERSION 0.7\n",
+    "FIELDS x y z\n",
+    "SIZE 4 4 4 \n",
+    "TYPE F F F \n",
+    "COUNT 1 1 1 \n",
+    "WIDTH {}\n",
+    "HEIGHT 1\n",
+    "VIEWPOINT 0 0 0 1 0 0 0\n",
+    "POINTS {}\n",
+    "DATA ascii\n",
+    "'''\n",
+    "\n",
+    "def write_pcd(points, save_pcd_path):\n",
+    "    n = len(points)\n",
+    "    lines = []\n",
+    "    for i in range(n):\n",
+    "        x, y, z= points[i]\n",
+    "        lines.append('{:.6f} {:.6f} {:.6f}'.format(x, y, z))\n",
+    "    with open(save_pcd_path, 'w') as f:\n",
+    "        f.write(HEADER.format(n, n))\n",
+    "        f.write('\\n'.join(lines))\n",
+    "\n",
+    "def write_pcd_from_ndarray(points, save_pcd_path):\n",
+    "    with open(save_pcd_path, 'w') as f:\n",
+    "        f.write(HEADER.format(len(points), len(points)) + '\\n')\n",
+    "        np.savetxt(f, points, delimiter = ' ', fmt = '%f %f %f')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "pycharm": {
